--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                                 <button type="button">
                                     <i class="material-icons blkShirtQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="blkShirtQty" value="1">
+                                <input type="number" class="blkShirtQty" value="1">
                                 <button type="button">
                                     <i class="material-icons blkShirtQtyAdd">add</i>
                                 </button>
@@ -449,7 +449,7 @@
                                 <button type="button">
                                     <i class="material-icons burShirtQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="burShirtQty" value="1">
+                                <input type="number" class="burShirtQty" value="1">
                                 <button type="button">
                                     <i class="material-icons burShirtQtyAdd">add</i>
                                 </button>
@@ -465,7 +465,7 @@
                                 <button type="button">
                                     <i class="material-icons hatQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="hatQty" value="1">
+                                <input type="number" class="hatQty" value="1">
                                 <button type="button">
                                     <i class="material-icons hatQtyAdd">add</i>
                                 </button>
@@ -481,7 +481,7 @@
                                 <button type="button">
                                     <i class="material-icons whiteShirtQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="whiteShirtQty" value="1">
+                                <input type="number" class="whiteShirtQty" value="1">
                                 <button type="button">
                                     <i class="material-icons whiteShirtQtyAdd">add</i>
                                 </button>
@@ -510,7 +510,7 @@
                                 <button type="button">
                                     <i class="material-icons cdQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="cdQty" value="1">
+                                <input type="number" class="cdQty" value="1">
                                 <button type="button">
                                     <i class="material-icons cdQtyAdd">add</i>
                                 </button>
@@ -527,7 +527,7 @@
                                 <button type="button">
                                     <i class="material-icons vinylQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="vinylQty" value="1">
+                                <input type="number" class="vinylQty" value="1">
                                 <button type="button">
                                     <i class="material-icons vinylQtyAdd">add</i>
                                 </button>
@@ -558,7 +558,7 @@
                                 <button type="button">
                                     <i class="material-icons cymQtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="cymQty" value="1">
+                                <input type="number" class="cymQty" value="1">
                                 <button type="button">
                                     <i class="material-icons cymQtyAdd">add</i>
                                 </button>
@@ -574,7 +574,7 @@
                                 <button type="button">
                                     <i class="material-icons post1QtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="post1Qty" value="1">
+                                <input type="number" class="post1Qty" value="1">
                                 <button type="button">
                                     <i class="material-icons post1QtyAdd">add</i>
                                 </button>
@@ -590,7 +590,7 @@
                                 <button type="button">
                                     <i class="material-icons post2QtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="post2Qty" value="1">
+                                <input type="number" class="post2Qty" value="1">
                                 <button type="button">
                                     <i class="material-icons post2QtyAdd">add</i>
                                 </button>
@@ -606,7 +606,7 @@
                                 <button type="button">
                                     <i class="material-icons post3QtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="post3Qty" value="1">
+                                <input type="number" class="post3Qty" value="1">
                                 <button type="button">
                                     <i class="material-icons post3QtyAdd">add</i>
                                 </button>
@@ -635,7 +635,7 @@
                                 <button type="button">
                                     <i class="material-icons tix1QtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="tix1Qty" value="1">
+                                <input type="number" class="tix1Qty" value="1">
                                 <button type="button">
                                     <i class="material-icons tix1QtyAdd">add</i>
                                 </button>
@@ -652,7 +652,7 @@
                                 <button type="button">
                                     <i class="material-icons tix2QtyRemove">remove</i>
                                 </button>
-                                <input type="text" class="tix2Qty" value="1">
+                                <input type="number" class="tix2Qty" value="1">
                                 <button type="button">
                                     <i class="material-icons tix2QtyAdd">add</i>
                                 </button>
