small changes to checkout and working on JS for checkout

--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
             <button class="clear-cart carousel-inactive" type="button">CLEAR</button>
             <button class="update-cart carousel-inactive" type="button">UPDATE</button>
         </section>
-        <section class="columns">
+        <section class="columnscheckout">
             <section class="column1"></section>
             <section class="column2"></section>
             <section class="column3"></section>
