--- a/index.html
+++ b/index.html
@@ -731,13 +731,10 @@
                     <button class="clear-cart carousel-inactive" type="button">CLEAR</button>
                     <button class="update-cart carousel-inactive" type="button">UPDATE</button>
                 </section>
-                <section class="columns">
-                    <section class="column1"></section>
-                    <section class="column2"></section>
-                    <section class="column3"></section>
-                    <section class="column4"></section>
-                    <section class="column5"></section>
-                    <section class="column6"></section>
+                <section class="columnscheckout">
+                        <!-- <section class="itemnamecheckout">Item</p>
+                        <section class="itempricecheckout">Price/section> -->
+
                 </section>
             </section>
         
