Cart subtotal adjusts when items removed

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                     </section>
                     <section class="cartTotal">
                         <p>SUBTOTAL:</p>
-                        <section class="total"></section>
+                        <section class="total" id="cartsubtotal"></section>
                     </section>
 
                     <button class="checkout-button carousel-active" type="button" id="checkoutbtn">CHECKOUT</button>
