--- a/index.html
+++ b/index.html
@@ -761,13 +761,13 @@
     <!-- checkout -->
     <section class="hidecheckout">
         <h1>CHECKOUT</h1>
-        <button type="button" class="contShop">(continue shopping)</button>
+        <button type="button" id="contShop">(continue shopping)</button>
 
         <section class="checkout-cart">
             <section class="checkout-cart-header">
                 <p>YOUR CART</p>
-                <button class="clear-cart carousel-inactive" type="button">CLEAR</button>
-                <button class="update-cart carousel-inactive" type="button">UPDATE</button>
+                <button class="clear-button carousel-inactive" type="button">CLEAR</button>
+                <!-- <button class="update-cart carousel-inactive" type="button">UPDATE</button> -->
             </section>
             <section class="columnscheckout">
                 <!-- Checkout Items Inserted Here-->
@@ -853,18 +853,18 @@
                                                     <option value="2024">
                                                         <option value="2025">
                                                             <option value="2026">
-                                                                <option value="2027">
-                                                                    <option value="2028">
-                                                                        <option value="2029">
-                                                                            <option value="2030">
-                                                                                <option value="2031">
-                                                                                    <option value="2032">
-                                                                                        <option value="2033">
-                                                                                            <option value="2034">
-                                                                                                <option value="2035">
-                                                                                                    <option value="2036">
-                                                                                                        <option value="2037">
-                                                                                                            <option value="2038">
+                            <option value="2027">
+                            <option value="2028">
+                            <option value="2029">
+                            <option value="2030">
+                            <option value="2031">
+                            <option value="2032">
+                            <option value="2033">
+                            <option value="2034">
+                            <option value="2035">
+                            <option value="2036">
+                            <option value="2037">
+                            <option value="2038">
                         </datalist>
                         <input class="cvv" type="text" placeholder="CVV">
                     </section>
