--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="bandpicbox">
             <img id="bandpic" src="pictures/band-promo-pic.jpg" alt="Castle No Kings Picture">
         </section>
-        <!-- Added Popup -->
+        <!-- Added to Cart Popup -->
         <section class="hideAdded">
             <section class="added">
                 <section class="added-header">
