--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <i class="material-icons">shopping_cart</i>
             </section>
         </header>
-
+    <section class="content">
         <section class="bandpicbox">
             <img id="bandpic" src="pictures/band-promo-pic.jpg" alt="Castle No Kings Picture">
         </section>
@@ -721,7 +721,8 @@
                     </a>
                 </section>
             </div>
-            </div>
+        </div>
+        </section>
             <!-- End Carousel Section -->
 
             <!--CODE FOR SLIDE OUT CART-->
@@ -757,7 +758,6 @@
             </section>
         </section>
     </section>
-
     <!-- checkout -->
     <section class="hidecheckout">
         <h1>CHECKOUT</h1>
